--- a/package.json
+++ b/package.json
@@ -33,24 +33,24 @@
   },
   "homepage": "https://github.com/kerwin612/ngx-query-builder",
   "dependencies": {
-    "@angular/animations": "^19.2.7",
-    "@angular/cdk": "~19.2.7",
-    "@angular/common": "^19.2.7",
-    "@angular/compiler": "^19.2.7",
-    "@angular/core": "^19.2.7",
-    "@angular/forms": "^19.2.7",
-    "@angular/material": "~19.2.7",
-    "@angular/platform-browser": "^19.2.7",
-    "@angular/platform-browser-dynamic": "^19.2.7",
-    "@angular/router": "^19.2.7",
+    "@angular/animations": "^19.2.14",
+    "@angular/cdk": "~19.2.14",
+    "@angular/common": "19.2.14",
+    "@angular/compiler": "19.2.14",
+    "@angular/core": "19.2.14",
+    "@angular/forms": "19.2.14",
+    "@angular/material": "~19.2.14",
+    "@angular/platform-browser": "19.2.14",
+    "@angular/platform-browser-dynamic": "19.2.14",
+    "@angular/router": "19.2.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.4"
+    "zone.js": "0.15.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.7",
-    "@angular/cli": "^19.2.7",
-    "@angular/compiler-cli": "^19.2.7",
+    "@angular-devkit/build-angular": "19.2.14",
+    "@angular/cli": "19.2.14",
+    "@angular/compiler-cli": "19.2.14",
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.1.0",
     "eslint": "^9.6.0",
@@ -60,7 +60,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^19.2.7",
+    "ng-packagr": "^19.2.2",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.0.0-alpha.38"
   }
