--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "@angular/router": "19.2.14",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "0.15.0"
+    "zone.js": "0.15.0",
+    "primeng": "^17.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "19.2.14",
